<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.dke.grimtrigger.grimtrigger.MainActivity"
    tools:showIn="@layout/activity_main">


    <TextView
        android:id="@+id/system_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/system_status_text_default" />

    <Button
        android:id="@+id/monitor_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:padding="20dp"
        android:text="@string/monitor_button_start_text" />

    <Button
        android:id="@+id/force_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/monitor_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:padding="20dp"
        android:text="@string/jam_button_start_text" />

    <Button
        android:id="@+id/crack_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/crack_button_start_text"
        android:layout_below="@+id/force_button"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/force_land_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/crack_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:padding="20dp"
        android:text="@string/force_land_button_text" />

    <Button
        android:id="@+id/go_home_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/force_land_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:padding="20dp"
        android:text="@string/go_home_button_text" />

    <TextView
        android:id="@+id/system_alert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/light"
        android:layout_below="@+id/go_home_button"
        android:layout_marginTop="40dp"
        android:padding="20dp"
        android:text="@string/system_alert_text_default"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
